[package]
name = "rgp-web"
license = "MIT"
version = "0.1.0"
edition = "2024"
authors = ["sean watters <sean@watters.io>"]
repository = "https://github.com/ordinarylabs.com/rgp-web"
readme = "README.md"

[dependencies]
wasm-bindgen = "0.2.87"
rgp = "0.3.3"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }

[lib]
crate-type = ["cdylib", "rlib"]
